// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bundled js feeds from build server are deduped 1`] = `
"(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({1:[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(1, 2);

},{\\"./d\\":2}],2:[function(require,module,exports){
'use strict';

module.exports = function sum(a, b) {
    return a + b;
};

},{}],3:[function(require,module,exports){
require('./a');

},{\\"./a\\":1}],4:[function(require,module,exports){
arguments[4][3][0].apply(exports,arguments)
},{\\"./a\\":1,\\"dup\\":3}],5:[function(require,module,exports){
arguments[4][3][0].apply(exports,arguments)
},{\\"./a\\":1,\\"dup\\":3}],6:[function(require,module,exports){
const a = require('./dup-1');
const b = require('./dup-2');
const c = require('./dup-3');

console.log('v3');

},{\\"./dup-1\\":3,\\"./dup-2\\":4,\\"./dup-3\\":5}],7:[function(require,module,exports){
arguments[4][1][0].apply(exports,arguments)
},{\\"./d\\":8,\\"dup\\":1}],8:[function(require,module,exports){
arguments[4][2][0].apply(exports,arguments)
},{\\"dup\\":2}],9:[function(require,module,exports){
arguments[4][3][0].apply(exports,arguments)
},{\\"./a\\":7,\\"dup\\":3}],10:[function(require,module,exports){
arguments[4][3][0].apply(exports,arguments)
},{\\"./a\\":7,\\"dup\\":3}],11:[function(require,module,exports){
arguments[4][3][0].apply(exports,arguments)
},{\\"./a\\":7,\\"dup\\":3}],12:[function(require,module,exports){
const a = require('./dup-1');
const b = require('./dup-2');
const c = require('./dup-3');

console.log('v2');

},{\\"./dup-1\\":9,\\"./dup-2\\":10,\\"./dup-3\\":11}],13:[function(require,module,exports){
arguments[4][1][0].apply(exports,arguments)
},{\\"./d\\":14,\\"dup\\":1}],14:[function(require,module,exports){
arguments[4][2][0].apply(exports,arguments)
},{\\"dup\\":2}],15:[function(require,module,exports){
arguments[4][3][0].apply(exports,arguments)
},{\\"./a\\":13,\\"dup\\":3}],16:[function(require,module,exports){
arguments[4][3][0].apply(exports,arguments)
},{\\"./a\\":13,\\"dup\\":3}],17:[function(require,module,exports){
arguments[4][3][0].apply(exports,arguments)
},{\\"./a\\":13,\\"dup\\":3}],18:[function(require,module,exports){
const a = require('./dup-1');
const b = require('./dup-2');
const c = require('./dup-3');

},{\\"./dup-1\\":15,\\"./dup-2\\":16,\\"./dup-3\\":17}]},{},[18,12,6]);
"
`;

exports[`Client gets bundled css file from build server 1`] = `
"body {
    margin: 0;
    padding: 0;
}

.b-title {
    color: red;
}

body {
    margin: 0;
    padding: 0;
}

.c-title {
    color: green;
}

body {
    margin: 0;
    padding: 0;
}

.a-title {
    color: blue;
}"
`;

exports[`Client gets bundled js file from build server 1`] = `
"(function(){function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s}return e})()({1:[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(1, 2);

},{\\"./d\\":2}],2:[function(require,module,exports){
'use strict';

module.exports = function sum(a, b) {
    return a + b;
};

},{}],3:[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(5, 6);

},{\\"./d\\":4}],4:[function(require,module,exports){
arguments[4][2][0].apply(exports,arguments)
},{\\"dup\\":2}],5:[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(3, 4);

},{\\"./d\\":6}],6:[function(require,module,exports){
arguments[4][2][0].apply(exports,arguments)
},{\\"dup\\":2}]},{},[5,3,1]);
"
`;

exports[`Client requests bundling of a css feed on build server 1`] = `
Object {
  "file": "95ba0b54346c7a87c7c54d4050c060f2bbeff6febba22820b9c2f84e129818fd.css",
  "uri": "http://127.0.0.1:7200/bundle/95ba0b54346c7a87c7c54d4050c060f2bbeff6febba22820b9c2f84e129818fd.css",
}
`;

exports[`Client requests bundling of a js feed on build server 1`] = `
Object {
  "file": "1cc23f0627a1f999b550c9257e36817a0674a5b04ee00fe410ed719c7eaa68ca.js",
  "uri": "http://127.0.0.1:7200/bundle/1cc23f0627a1f999b550c9257e36817a0674a5b04ee00fe410ed719c7eaa68ca.js",
}
`;

exports[`Multiple clients get uploaded css feeds from build server 1`] = `
Array [
  Array [
    Object {
      "content": "body {
    margin: 0;
    padding: 0;
}

.a-title {
    color: blue;
}",
      "file": "integration/assets/a.css",
      "id": "1a54612eb24332ba5b5bbd272b577a4bc0ada16061c32328ca76dcce512917d0",
      "name": "integration",
      "version": "1.0.0",
    },
  ],
  Array [
    Object {
      "content": "body {
    margin: 0;
    padding: 0;
}

.b-title {
    color: red;
}",
      "file": "integration/assets/b.css",
      "id": "e99eff35f3004172ec02c8cce828ca896802c19fbcecfa40c5f391a0762e45d9",
      "name": "integration",
      "version": "1.0.0",
    },
  ],
  Array [
    Object {
      "content": "body {
    margin: 0;
    padding: 0;
}

.c-title {
    color: green;
}",
      "file": "integration/assets/c.css",
      "id": "57f2dbebc30c76f889fe7578f84c6f34a8e79e217e80475e0a6861c871e580fa",
      "name": "integration",
      "version": "1.0.0",
    },
  ],
]
`;

exports[`Multiple clients get uploaded js feeds from build server 1`] = `
Array [
  Array [
    Object {
      "deps": Object {
        "./d": "320f596434a079912e951a037302087837f241f2896be048e3ccd18d8e6888c9",
      },
      "entry": true,
      "expose": false,
      "file": "integration/assets/a.js",
      "id": "893576861db8f16e03815f618ca6838cb4af6fd867b10ffa5684e1f1fcd6b467",
      "index": 1,
      "indexDeps": Object {
        "./d": 2,
      },
      "order": 0,
      "source": "'use strict';

const sum = require('./d');

sum(1, 2);
",
    },
    Object {
      "deps": Object {},
      "file": "integration/assets/d.js",
      "id": "320f596434a079912e951a037302087837f241f2896be048e3ccd18d8e6888c9",
      "index": 2,
      "indexDeps": Object {},
      "source": "'use strict';

module.exports = function sum(a, b) {
    return a + b;
};
",
    },
  ],
  Array [
    Object {
      "deps": Object {
        "./d": "320f596434a079912e951a037302087837f241f2896be048e3ccd18d8e6888c9",
      },
      "entry": true,
      "expose": false,
      "file": "integration/assets/b.js",
      "id": "2c1b02e10e4c9351f6b8babe4291e18e4e0a1b1925ec31501c4533969244112b",
      "index": 1,
      "indexDeps": Object {
        "./d": 2,
      },
      "order": 0,
      "source": "'use strict';

const sum = require('./d');

sum(3, 4);
",
    },
    Object {
      "deps": Object {},
      "file": "integration/assets/d.js",
      "id": "320f596434a079912e951a037302087837f241f2896be048e3ccd18d8e6888c9",
      "index": 2,
      "indexDeps": Object {},
      "source": "'use strict';

module.exports = function sum(a, b) {
    return a + b;
};
",
    },
  ],
  Array [
    Object {
      "deps": Object {
        "./d": "320f596434a079912e951a037302087837f241f2896be048e3ccd18d8e6888c9",
      },
      "entry": true,
      "expose": false,
      "file": "integration/assets/c.js",
      "id": "16068ec7b42c0a4b84a0f99c76f10a11ee1fdab6761a1d35c30f817241d13525",
      "index": 1,
      "indexDeps": Object {
        "./d": 2,
      },
      "order": 0,
      "source": "'use strict';

const sum = require('./d');

sum(5, 6);
",
    },
    Object {
      "deps": Object {},
      "file": "integration/assets/d.js",
      "id": "320f596434a079912e951a037302087837f241f2896be048e3ccd18d8e6888c9",
      "index": 2,
      "indexDeps": Object {},
      "source": "'use strict';

module.exports = function sum(a, b) {
    return a + b;
};
",
    },
  ],
]
`;

exports[`Multiple clients upload css feeds to build server 1`] = `
Array [
  Object {
    "file": "ba6124be6a330d945bc8b2e4798cde45320f4dc16c471f866e9fc991fb89d8fb.json",
    "id": "ba6124be6a330d945bc8b2e4798cde45320f4dc16c471f866e9fc991fb89d8fb",
    "uri": "http://127.0.0.1:7200/feed/ba6124be6a330d945bc8b2e4798cde45320f4dc16c471f866e9fc991fb89d8fb.json",
  },
  Object {
    "file": "515697d2559e49a972bdf09e0061435f845bef5c7236835ba675b3f2b1a95f47.json",
    "id": "515697d2559e49a972bdf09e0061435f845bef5c7236835ba675b3f2b1a95f47",
    "uri": "http://127.0.0.1:7200/feed/515697d2559e49a972bdf09e0061435f845bef5c7236835ba675b3f2b1a95f47.json",
  },
  Object {
    "file": "d0f49e024300c60cfa5f540061a18a228b863e81cfdbe0307d8d8e3096976ddb.json",
    "id": "d0f49e024300c60cfa5f540061a18a228b863e81cfdbe0307d8d8e3096976ddb",
    "uri": "http://127.0.0.1:7200/feed/d0f49e024300c60cfa5f540061a18a228b863e81cfdbe0307d8d8e3096976ddb.json",
  },
]
`;

exports[`Multiple clients upload js feeds to build server 1`] = `
Array [
  Object {
    "file": "149967898754950cb6001298f67fbaa674420d8aa409c48a7ef2c5fb675843d0.json",
    "id": "149967898754950cb6001298f67fbaa674420d8aa409c48a7ef2c5fb675843d0",
    "uri": "http://127.0.0.1:7200/feed/149967898754950cb6001298f67fbaa674420d8aa409c48a7ef2c5fb675843d0.json",
  },
  Object {
    "file": "5c86f64379d41363b24fdcad1470885ef07d0963594c497cbfb4b8706bbf63c5.json",
    "id": "5c86f64379d41363b24fdcad1470885ef07d0963594c497cbfb4b8706bbf63c5",
    "uri": "http://127.0.0.1:7200/feed/5c86f64379d41363b24fdcad1470885ef07d0963594c497cbfb4b8706bbf63c5.json",
  },
  Object {
    "file": "3547b92e20a4f617ae053bc3494bafaa6adfca5364853e155db0dbe4de96a4dc.json",
    "id": "3547b92e20a4f617ae053bc3494bafaa6adfca5364853e155db0dbe4de96a4dc",
    "uri": "http://127.0.0.1:7200/feed/3547b92e20a4f617ae053bc3494bafaa6adfca5364853e155db0dbe4de96a4dc.json",
  },
]
`;
